--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,3 +4,10 @@
     margin: 50px auto 0 auto;
     width: 400px;
 }
+
+@font-face {
+  font-family: 'emojis';
+  src: url('../fonts/emojisymbols-regular.woff');
+  font-weight: normal;
+  font-style: normal;
+}
