--- a/app/templates/layout/main_tmpl.hbs
+++ b/app/templates/layout/main_tmpl.hbs
@@ -1,1 +1,8 @@
-TRUCKING!! {{!empty MainTmpl template}}
+<div id="main">
+  <button id="menu-btn"><span class="btn-icon">=</span>Menu</button>
+  <div id="menu"></div>
+  <div id="content">
+    <div class="header"></div>
+	  <div class="post-list"></div>
+  </div>
+</div>
