adding some templates

--- a/app/templates/layout/header.hbs
+++ b/app/templates/layout/header.hbs
@@ -1,8 +1,9 @@
-<div class="user-pic"></div>
+<img class="user-pic" alt="User Profile Picture" />
 <div class="user-options">
 	<h1>Joseph Hillhouse</h1>
 	<div class="filters">
 		<button id="new-post"><span class="btn-icon"></span>New Post</button>
 		<button id="ask-doctor"><span class="btn-icon"></span>Ask a Doctor</button>
+		<button id="comments"><span class="btn-icon"></span>Comments</button>
 	</div>
 </div>
