corrected the font locations in the font-face

--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -4,7 +4,7 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
 @import 'lv-widgets/src/css/lv-widgets';
 @font-face {
   font-family: 'emojis';
-  src: url('../fonts/emojisymbols-regular.woff');
+  src: url('fonts/emojisymbols-regular.woff');
   font-weight: normal;
   font-style: normal;
 }
