--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -132,7 +132,38 @@ $footer-height: 24px;
     }
 }
 
-#content {
-  padding-top: $header-height;
-  overflow: scroll;
+.header-content {
+    display: flex;
+    margin: 10px;
+    
+    h1 {
+        margin-top: 0;
+    }
+}
+
+.user-pic {
+    border-radius: 25px;
+    height: 50px;
+    margin-right: 20px;
+    overflow: hidden;
+    width: 50px;
+}
+
+button {
+    background: transparent;
+    border: 0 none;
+    overflow: hidden;
+    
+    .btn-icon {
+        font-size: 20px;
+        
+        &.new-post:before {
+            content: '+';
+        }
+    }
+}
+
+.vo-only {
+    position: absolute;
+    left: -2000px;
 }
