--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -83,6 +83,7 @@ $footer-height: 24px;
             text-align: left;
             background-color: #fff;
             display: none;
+            height: 100vh;
             &.on {
                 display: block;
                 + .menu-overlay {
