--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -21,11 +21,44 @@ $footer-height: 24px;
     padding: 0.2em 0;
 }
 
+.container {
+    height: 100vh;
+    -webkit-transition: 500ms ease all;
+    transition: 500ms ease all; 
+}
+
+.nav-container {
+    height: 100vh;
+    left: -25%;
+    position: fixed;
+    width: 25%;
+    transition: 500ms ease all;
+    -webkit-transition: 500ms ease all;
+    opacity: 0;
+}
+.nav-open {
+    &.nav-container {
+        transform: translateX(100%);
+        transform: translate3d(100%, 0, 0);
+        -webkit-transform: translateX(100%);
+        -webkit-transform: translate3d(100%, 0, 0);
+        opacity: 1;
+    }
+    &.content-wrapper {
+       transform: translateX(25%);
+        transform: translate3d(25%, 0, 0);
+        -webkit-transform: translateX(25%);
+        -webkit-transform: translate3d(25%, 0, 0);
+    }
+} 
+
 .container-full {
     width: 100%;
     height: 100%;
     position: fixed;
 }
+
+
 
 .header-fixed {
     background-color: #444;
@@ -64,57 +97,6 @@ $footer-height: 24px;
             font-size: 1.8em;
             font-weight: 800;
             color: #fff;
-        }
-    }
-
-    .menu-container {
-        button {
-            background-color: transparent;
-            padding: 9px 12px 8px 12px;
-        }
-        i {
-            font-size: 1.5em;
-        }
-        .menu {
-            position: absolute;
-            left: 0px;
-            top: 48px;
-            padding-left: 0px;
-            text-align: left;
-            background-color: #fff;
-            display: none;
-            height: 100vh;
-            &.on {
-                display: block;
-                + .menu-overlay {
-                    display: block;
-                    position: fixed;
-                    top: 48px; left: 0; right: 0; bottom: 24px;
-                    background-color: rgba(0,0,0, 0.25);
-                    z-index: -1;
-
-                }
-            }
-            li {
-                list-style: none;
-                i {
-                  font-size: 1.1em;
-                  margin-right: 12px;
-                }
-                a {
-                    background-color: #000;
-                    color: #fff;
-                    padding: 15px 120px 15px 15px;
-                    display: block;
-                    text-decoration: none;
-                    &:focus, &:hover {
-                        background-color: #555;
-                    }
-                }
-            }
-            + .menu-overlay {
-                display: none;
-            }
         }
     }
 }
