--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -7,4 +7,7 @@ $dark-teal: #005875;
 $light-teal: #03C0FF;
 $gold: #FFB400;
 $dark-gold: #BB8400;
-$grey: #666666;
+$grey: #555;
+
+
+$dark-black: #000;
