--- a/app/css/element/_button.scss
+++ b/app/css/element/_button.scss
@@ -11,4 +11,22 @@ button {
             content: '+';
         }
     }
+    
+    &.btn-primary {
+      border-image: none;
+      border-radius: 4px 4px 4px 4px;
+      border-style: solid;
+      border-width: 1px;
+      box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+      margin-bottom: 0;
+      text-align: center;
+      vertical-align: middle;
+      font-size: 12px;
+      font-weight: 500;
+      background-color: #FBB450;
+      background-image: -moz-linear-gradient(center top, #FBB450, #F89406);
+      border-color: #F89406 #F89406 #AD6704;
+      background-repeat: repeat-x;
+      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    }
 }
