--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -10,6 +10,8 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
 //# Components
 @import 'component/login';
 @import 'component/new_post';
+@import 'component/feed_wall';
+@import 'component/main_header';
 
 @font-face {
   font-family: 'EmojiSymbols';
@@ -147,22 +149,7 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
     }
 }
 
-.header-content {
-    display: flex;
-    margin: 10px;
-    
-    h1 {
-        margin-top: 0;
-    }
-}
 
-.user-pic {
-    border-radius: 25px;
-    height: 50px;
-    margin-right: 20px;
-    overflow: hidden;
-    width: 50px;
-}
 
 .background-gradient {
     background-image: -webkit-gradient(
