--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -4,12 +4,42 @@
   
   .post {
     
+    margin-bottom: 20px;
+    box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.75);
+    
     .post-content {
       height: 400px;
-      overflow: hidden;
       background: rgba(0,0,0,0.2);
-      color: #fff;
-      margin-bottom: 20px;
+      color: #fff;;
+      
+      .message {
+        overflow: hidden;
+        max-height: 210px;
+        padding: 0 15px;
+        text-align: justify;
+      }
+    }
+    
+    .post-footer {
+      background: rgba(0, 0, 0, 0.2);
+      border-top: 1px solid #2f88af;
+      display: flex;
+      justify-content: flex-end;
+      
+      button {
+        
+        border-right: 1px solid #2f88af;
+        color: #fff;
+        padding: 4px 10px;
+       
+        &:first-child{
+            border-left: 1px solid #2f88af;
+        }
+        
+        &:last-child {
+          border-right: 0;
+        }
+      }
     }
   }
   
