modifying moods and feed wall

--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -10,7 +10,8 @@
     .post-content {
       height: 400px;
       background: rgba(0,0,0,0.2);
-      color: #fff;;
+      color: #fff;
+      padding:10px;
       
       .message {
         overflow: hidden;
