--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -3,20 +3,36 @@
 #content{
   
   .post {
-    
     margin-bottom: 20px;
     box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.75);
+
+    .author-information {
+      margin: 0 0 20px 20px;
+      box-shadow: 0 0 4px white;
+      border-radius: 10px;
+      padding: 8px;
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    .title {
+      margin-top: 0;
+
+      .emoticon {
+        position: relative;
+        top: 10px;
+      }
+    }
+
+    .user-pic {
+      width: 32px;
+    }
     
     .post-content {
-      height: 400px;
       background: rgba(0,0,0,0.2);
       color: #fff;
-      padding:10px;
+      padding: 20px;
       
       .message {
-        overflow: hidden;
-        max-height: 210px;
-        padding: 0 15px;
         text-align: justify;
       }
     }
