--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -17,7 +17,8 @@
 
       .emoticon {
         position: relative;
-        top: 10px;
+        top: 5px;
+        font-size: 32px;
       }
     }
 
