--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -20,6 +20,16 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
   font-style: normal;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
