--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -28,7 +28,7 @@
       justify-content: flex-end;
       
       button {
-        
+        border-radius: 0;
         border-right: 1px solid #2f88af;
         color: #fff;
         padding: 4px 10px;
