--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -25,6 +25,11 @@
     .user-pic {
       width: 32px;
     }
+    .post-date {
+      padding: 0;
+      padding-right: 10px;
+      color:#FFF;
+    }
     
     .post-content {
       background: rgba(0,0,0,0.6);
@@ -56,6 +61,11 @@
           border-right: 0;
         }
       }
+    }
+    .post-container {
+        box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.75);
+        margin-bottom: 20px;
+        padding: 0;
     }
   }
   
