Added overflow to the body when the menu is opened

--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -33,6 +33,10 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
     transition: 500ms ease all; 
 }
 
+.nav-open {
+    overflow-x: hidden;
+}
+
 .nav-wrapper {
     background: #3F484F;
     height: 100vh;
@@ -44,6 +48,7 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
     z-index: 10000;
     .menu-btn {
         position: absolute;
+        color: #fff;
         right: -45px;
         font-size: 2em;
         width: 45px;
@@ -113,6 +118,10 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
     position: fixed;
 }
 
+.header .header-content h1 {
+	color: #fff;
+}
+
 .header-fixed {
     background-color: #444;
     position: fixed;
@@ -151,6 +160,11 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
             font-weight: 800;
             color: #fff;
         }
+    }
+}
+.filters {
+    button {
+        color: #FFF;
     }
 }
 
