--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -29,6 +29,14 @@
       padding: 0;
       padding-right: 10px;
       color:#FFF;
+      text-align: right;
+      text-shadow: 2px 2px 10px black;
+      font-size: 0.8em;
+      .day {
+        font-size: 28px;
+        line-height: 28px;
+      }
+
     }
     
     .post-content {
