updated quick links section

--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -3,7 +3,7 @@
 #content{
   
   .post {
-    margin-bottom: 20px;
+    margin: 0 0 20px 20px;
 
     .author-information {
       margin: 0 0 20px 20px;
@@ -69,12 +69,34 @@
     }
   }
   
-  .link{
-    margin-left: 20px;
-    max-height: 200px;
-    overflow: hidden;
-    background: rgba(0,0,0,0.2);
-    color: #fff;
-    margin-bottom: 20px;
+  .link-container {
+      margin: 0 0 20px 20px;
+      
+      .link{
+        max-height: 200px;
+        overflow: hidden;
+        background: rgba(0,0,0,0.2);
+        color: #fff;
+        
+        article {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            .fa-question {
+              font-size: 10em;
+            }
+        }
+        
+        footer {
+          span {
+            background: rgba(0, 0, 0, 0.2);
+            border-top: 1px solid #2f88af;
+            display: flex;
+            justify-content: flex-end;
+            padding: 10px;
+          }
+        }
+      }
   }
 }
