--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -35,6 +35,7 @@
       background: rgba(0,0,0,0.6);
       color: #fff;
       padding: 20px;
+      min-height: 100px;
       
       .message {
         text-align: justify;
