--- a/app/css/element/_button.scss
+++ b/app/css/element/_button.scss
@@ -1,3 +1,4 @@
+$font-size: 12px;
 button {
     background: transparent;
     border: 0 none;
@@ -7,8 +8,11 @@ button {
         font-size: 20px;
         margin-right: 10px;
         
-        &.new-post:before {
-            content: '+';
+        &.new-post {
+          line-height: $font-size;  
+          &:before {
+              content: '+';
+          }
         }
     }
     
@@ -21,7 +25,7 @@ button {
       margin-bottom: 0;
       text-align: center;
       vertical-align: middle;
-      font-size: 12px;
+      font-size: $font-size;
       font-weight: 500;
       background-color: #FBB450;
       background-image: -moz-linear-gradient(center top, #FBB450, #F89406);
