adjusted the search to make it more responsive

--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -77,6 +77,7 @@ p {
             background: none;
             border-color: #777;
             color: #FFF;
+            width: 75%;
         }
         .fa-search {
             color: inherit;
