Styling for comments

--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -4,6 +4,7 @@
   
   .post {
     margin-bottom: 20px;
+    position: relative;
 
     .author-information {
       margin: 0 0 20px 20px;
@@ -51,6 +52,7 @@
         border-radius: 0;
         border-right: 1px solid #2f88af;
         color: #fff;
+        font-size: 14px;
         padding: 4px 10px;
        
         &:first-child{
