--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -12,6 +12,7 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
 @import 'component/new_post';
 @import 'component/feed_wall';
 @import 'component/main_header';
+@import 'component/comments';
 
 @font-face {
   font-family: 'EmojiSymbols';
