--- a/app/css/component/_feed_wall.scss
+++ b/app/css/component/_feed_wall.scss
@@ -29,7 +29,7 @@
       padding-right: 10px;
       color:#FFF;
       text-align: right;
-      text-shadow: 2px 2px 10px black;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.7);
       font-size: 0.8em;
       .day {
         font-size: 28px;
@@ -71,7 +71,6 @@
       }
     }
     .post-container {
-        box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.75);
         margin-bottom: 20px;
         padding: 0;
     }
