--- a/app/css/component/_new_post.scss
+++ b/app/css/component/_new_post.scss
@@ -1,22 +1,46 @@
 @import '../variables';
 
 .new-post-page {
+	h3 { 
+		color: white;
+	}
+
+	label {
+		color: white;
+	}
+
+	.cancel-button {
+		color: white;
+	}
 
 	.moods {
 		label {
 			border-radius: 6px;
 			padding: 0 12px;
-			border: 1px solid transparent;
-			transition: border-color 1s;
+			border: 3px solid transparent;
+			opacity: 0.7;
+			transition: opacity 1s, border-color 0.2s;
+
+			.emoticon {
+				display: inline-block;
+				width: 37px;
+				line-height: 1.2;
+				height: 61px;
+			}
 		}
 
 		label.active {
-			border-color: $light-teal;
-			box-shadow: 0 0 4px $light-teal;
+			border-color: rgba(255, 255, 255, 0.8);
+			opacity: 1;
 		}
 
 		.mood {
 			display: none;
 		}
+	}
+
+	textarea, input[type="text"] {
+		background: rgba(0, 0, 0, 0.6);
+		color: white;
 	}
 }
