--- a/app/css/component/_main_header.scss
+++ b/app/css/component/_main_header.scss
@@ -11,7 +11,7 @@
     }
     
     .user-pic {
-      border-radius: 25px;
+      //border-radius: 25px;
       height: 50px;
       margin-right: 5px;
       overflow: hidden;
