--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -13,6 +13,7 @@ $icon-font-path: "../lib/sass-bootstrap/fonts/";
 @import 'component/feed_wall';
 @import 'component/main_header';
 @import 'component/comments';
+@import 'component/post';
 
 @font-face {
   font-family: 'Emoticons';
