--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -68,10 +68,8 @@ p {
     .search-wrapper {
         color: #777;
         padding: 5px;
-        .fa-close {
+        .fa-search {
             color: inherit;
-            position: absolute;
-            left: 0;
         }
         .nav-search {
             border-width: 0 0 2px 0;
@@ -80,14 +78,6 @@ p {
             color: #FFF;
             width: 75%;
         }
-        .fa-search {
-            color: inherit;
-            position: absolute;
-            right: 0;
-        }
-    }
-    .create-post-wrapper {
-        margin: 25px 0; 
     }
     .nav-menu-items {
         list-style-type: none;
@@ -177,6 +167,17 @@ p {
 .filters {
     button {
         color: #FFF;
+    }
+}
+.new-post-page {
+    form {
+        margin-top: 50px;
+        label {
+            color: #FFF;
+        }
+        .moods label {
+            background-color: #FFF;
+        }
     }
 }
 
