--- a/app/css/component/_main_header.scss
+++ b/app/css/component/_main_header.scss
@@ -4,7 +4,7 @@
   .header-content {
     display: flex;
     margin: 10px;
-    padding: 20px;
+    padding: 20px 10px;
     
     h1 {
       margin-top: 0;
@@ -15,7 +15,7 @@
       height: 50px;
       margin-right: 5px;
       overflow: hidden;
-      width: 50px;
+      width: 40px;
       img {
         width: 32px;
       }
