--- a/app/css/ptsd.scss
+++ b/app/css/ptsd.scss
@@ -82,7 +82,7 @@ p {
     }
     .nav-menu-items {
         list-style-type: none;
-        margin: 0;
+        margin-top: 20px;
         padding: 0;
         li {
             padding: 0;
